# python-2021-11-18

./: .gitignore  .replit  pyproject.toml
.cache/replit/nix/: env.json
notebooks/: End.ipynb  Home.ipynb  Start.ipynb
notebooks/.ipynb_checkpoints/: Home-checkpoint.ipynb
notebooks/Exercises/: Exercises.ipynb
notebooks/Exercises/Chapter1/: Chapter 1 - Exercises.ipynb  NAME_SURNAME_2.ipynb  Template.ipynb
notebooks/Exercises/Chapter1/.ipynb_checkpoints/: NAME_SURNAME-checkpoint.ipynb
notebooks/Exercises/Chapter2/: Chapter 2 - Exercises.ipynb  Template.ipynb
notebooks/Exercises/Chapter3/: Chapter 3 - Exercises.ipynb  Template.ipynb
notebooks/Exercises/Chapter3/.ipynb_checkpoints/: Template-checkpoint.ipynb
notebooks/Exercises/Chapter4/: Chapter 4 - Exercises.ipynb  Template.ipynb
notebooks/Exercises/Chapter5/: Chapter 5 - Exercises.ipynb  Template.ipynb
notebooks/LectureAndCode/: Chapter1.ipynb  Chapter2.ipynb  Chapter3.ipynb  Chapter4.ipynb  Chapter5.ipynb  Chapter6.ipynb  Chapter7.ipynb  Introduction.ipynb
notebooks/LectureAndCode/Answers/: Answers1.md  Answers2.md  Answers3.md  Answers4.md
notebooks/LectureAndCode/Chapter1/: Chapter1.ipynb
notebooks/LectureAndCode/Chapter2/: Chapter2.ipynb
notebooks/LectureAndCode/Chapter3/: Chapter3.ipynb  book1.txt  book2.txt
notebooks/LectureAndCode/Chapter4/: Chapter4.ipynb
notebooks/LectureAndCode/Chapter5/: Chapter5.ipynb
notebooks/LectureAndCode/Chapter6/: Chapter6.ipynb
notebooks/LectureAndCode/Chapter7/: Chapter7.ipynb
(+5 files in other folders)
