[tool.poetry]
name = "test3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipywidgets = "^7.6.5"
jupyter = "^1.0.0"
jupyterlab = "^3.2.3"
Markdown = "^3.3.4"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
